# tswheel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cursor/rules/: pythondev.mdc
src/tswheel/: distplot.py  forecasters.py  fredutils.py  histplot.py  io.py  lineplot.py  plotutils.py  regressions.py  tsutils.py
src/tswheel/datautils/: metafilter.py  pdutils.py
src/tswheel/datawork/: dfchecks.py  dfutils.py  metafilter.py  strchecks.py
src/tswheel/viz/: _common.py  _constants.py  distplot.py  heatmap.py  lineplot.py
tests/: test_boxplot.py  test_dfchecks.py  test_dfutils.py  test_heatmap.py  test_histplot.py  test_io.py  test_lineplot.py  test_regressions.py  test_strchecks.py  test_tsutils.py
tests/datautils/: test_dfutils_ts_concat.py  test_ensure_period_index.py  test_have_same_index_type.py  test_merge_on_index.py  test_metafilter.py  test_strchecks.py
tests/datawork/: test_dfchecks_ensure_period_index.py  test_dfutils_coerce_to_period_index.py  test_dfutils_ensure_period_index.py  test_dfutils_have_same_index_type.py  test_dfutils_ts_concat.py  test_metafilter.py
